# n2p-api

./: .gitignore  Dockerfile  README.md  lifespan.py  main.py  pyproject.toml
.github/workflows/: ci.yml
common/: depends.py  schemas.py
geeknews/: lifespan.py  messages.py  router.py  service.py
hackernews/: lifespan.py  messages.py  router.py  schemas.py  service.py
podcast/: router.py  service.py
