[project]
name = "n2p-api"
version = "0.1.0"
description = "The api server for the n2p(news-to-podcasts) application."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
line-length = 120
