[project]
name = "n2p-api"
version = "0.1.3"
description = "The api server for the n2p(news-to-podcasts) application."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "apscheduler>=3.11.1",
  "beautifulsoup4>=4.14.2",
  "fastapi[standard]>=0.121.1",
  "google-cloud-texttospeech>=2.33.0",
  "openai>=2.7.2",
  "redis>=7.0.1",
  "requests>=2.32.5",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = ["ruff>=0.14.5"]

[tool.ruff]
line-length = 120
